project mobile overlapping bug fixed

--- a/src/Styles/App.scss
+++ b/src/Styles/App.scss
@@ -120,10 +120,12 @@ body{
   position: absolute;
   top: 0;
   left: 0;
+  overflow-x: hidden;
   svg{
     width:100%;
     @media (max-width:$mobile) {
       height:200%;
+      width: 130%;
     }
   }
 }
