--- a/src/Styles/Project.scss
+++ b/src/Styles/Project.scss
@@ -6,6 +6,9 @@
   z-index: 2;
 }
 
+h2{
+  margin-bottom: 16px;
+}
   
   
 
